# hackboyun

./: .gitignore  CMakeLists.txt  README.md  todolist.md
doc/: Boyun_FlashFirmware.md
scripts/: adc.sh  close_watchdog.sh  gpio.sh  pwm.sh
src/: chipid.c  gpio.c  gpio.h  hidemo.c  hidemo.h  hierrors.c  hierrors.h  main.c  night.c  night.h  ringfifo.c  ringfifo.h  rtsp_server.c  sensor.c  sensor.h  tools.c  tools.h
src/config/: app_config.c  app_config.h  config.c  config.h  sensor_config.c  sensor_config.h
src/include/: acodec.h  hi_comm_isp.h  hi_comm_video.h  hi_defines.h
src/rtsp/: ringfifo.c  ringfifo.h  rtputils.c  rtspservice.c  rtspservice.h  rtsputils.h  sample_venc.c
src/rtsp/common/: sample_comm.h  sample_comm_audio.c  sample_comm_isp.c  sample_comm_ive.c  sample_comm_ive.h  sample_comm_sys.c  sample_comm_venc.c  sample_comm_vo.c  sample_comm_vpss.c
tools/: 博云救砖教程.docx
